Style updates. Bug fix, tile now first goes under fixed tile but not goes to end of fixed tile when product is expanded or added with shifting.

--- a/css/style.css
+++ b/css/style.css
@@ -18,10 +18,8 @@ body {
 	make sure that every element with an overflow of anything other than "visible" also has a position
 	style set to something other than the default "static". This way, they will all appear in the offsetParent
 	chain, and can be easily subtracted in the same loop that adds the offsetLeft and offsetTop. */
-	//overflow: auto;
 	position: relative;
 	margin: auto;
-	//max-width: 1600px;
 	width: 100%;
 	height:600px;
 	/* make it visible */
@@ -32,7 +30,6 @@ body {
 #table2 {
 	/* align table to the right */
 	margin-left: -3px !important;
-	//width: 430px;
 }
 .panel-fixed {
 	margin-top: 52px;
@@ -41,13 +38,15 @@ body {
 	right: 0;
 	border-color: #EEE !important;
 	border-radius: 0px !important;
-	//fborder-bottom: 6px solid #DDD !important;
 	z-index: 99;
 	position: fixed;
 	-webkit-transform: translateZ(0);
 }
 .panel-fixed .panel-body {
 	padding: 3px;
+}
+.panel-fixed .form-control {
+	width: 120px !important;
 }
 
 /* table cells */
@@ -232,10 +231,13 @@ body {
 	max-width: 960px;
 	margin: 0px auto;
 }
-#calendarTable td, #productsTable td, #productsInfoTable td, #produceTable td{
+#calendarTable td, #productsTable td, #produceTable td{
 	padding: 0px;
-    height: 30px;
+    height: 25px;
     vertical-align: baseline;
+}
+#productsInfoTable td {
+	padding: 0px;
 }
 #calendarTable thead th, #productsTable thead th, #productsInfoTable thead th{
 	border-style: inherit;
@@ -333,6 +335,9 @@ input#product, input#product {
 }
 #mainNavBar ul.nav.navbar-nav li.active a{
 	background-color: #EAF5FF;
+}
+.btn, .form-control, .panel, .panel-heading, .input-group-addon {
+	border-radius: 0px !important;
 }
 
 
